# pptx-concatenator

./: .flake8  .gitignore  MANIFEST.in  Makefile  README.md  pptx_concat.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_pptx_concat.py
.github/workflows/: ci.yml  lint.yml
pptx_concatenator/: __init__.py  cli.py  concatenator.py
tests/: __init__.py  test_pptx_concat.py
