[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pptx-concatenator"
version = "0.1.0"
description = "PowerPoint concatenation library using pptx-slide-copier"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICEN[CS]E*"]
authors = [
    {name = "SpringMT", email = "today.is.sky.blue.sky@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-pptx>=0.6.21",
    "pptx-slide-copier>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/SpringMT/pptx-concatenator"
Repository = "https://github.com/SpringMT/pptx-concatenator"

[project.scripts]
pptx-concat = "pptx_concatenator.cli:main"

[tool.setuptools.packages.find]
include = ["pptx_concatenator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=pptx_concatenator",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 180
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
